--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-devkit/core": "^13.0.3",
         "@angular-material-components/datetime-picker": "^5.1.0",
         "@angular/animations": "~11.0.3",
         "@angular/cdk": "^11.2.1",
@@ -40,6 +41,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
         "@json-editor/json-editor": "^2.5.3",
         "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+        "@ng-web-apis/common": "^1.12.1",
         "@ng-web-apis/mutation-observer": "^1.1.0",
         "@taiga-ui/addon-charts": "^2.20.0",
         "@taiga-ui/addon-mobile": "^2.20.0",
